--- a/style.css
+++ b/style.css
@@ -1,30 +1,68 @@
+h1
+{
+  font-family: 'Special Elite', fantasy;
+  color:rgb(38, 0, 255);
+  background-color: cornsilk;
+}
+
+#show_sketch
+{
+  float:right;
+}
+
+canvas 
+  {
+    border:2px solid white;
+    border-radius:20px;
+    margin-top:150px;
+    box-shadow:5px 5px 5px grey;
+    box-shadow: 1px 1px 38px #ffffff;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+@keyframes example {
+
+  from {box-shadow: 1px 1px 38px grey;}
+  to {box-shadow: 1px 1px 38px white;}
+
+}
+
+
+p, span
+  {
+    padding-top:10px;
+    font-family: 'Special Elite', fantasy;
+    font-size:25px;
+    
+  }
 body{
     background-color: greenyellow;
 }
 h1{
-    font-family: 'Oswald' sans-serif;
-    background-color: cornsilk;
-    color: rgb(38,0,255);
+  font-family: 'Oswald' sans-serif;
+  background-color: cornsilk;
+  color: rgb(38,0,255);
 }
 #show_sketch{
-    float: right;
+  float: right;
 }
 #score{
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-    margin-left: 5px;
+  font-size: 20px;
+  font-family: 'Oswald', sans-serif;
+  margin-left: 5px;
 }
 #timer{
-    float: right;
-    font-size: 20px;
-    font-family: 'Oswald', sans-serif;
-    margin-left: 5px;
+  float: right;
+  font-size: 20px;
+  font-family: 'Oswald', sans-serif;
+  margin-left: 5px;
 }
 p{
-    font-size: 25px;
-    font-family: 'Oswald',sans-serif;
-    color: black;
+  font-size: 25px;
+  font-family: 'Oswald',sans-serif;
+  color: black;
 }
 #sketch_to_be_drawn{
-    color:red;
+  color:red;
 }
